<resources>
    <string name="app_name">IMS Noida</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="courses">Courses</string>
    <string name="attendance">Attendance</string>
    <string name="ims_gallery">IMS Gallery</string>
    <string name="examination">Examination</string>
    <string name="about_us">About Us</string>
    <string name="ask_questions">Ask Questions</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
