<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp"
        android:background="#E8E6E6E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/imsnoida"
                    android:gravity="center"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="245dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView1"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/course" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView1"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/courses"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonCourse"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />


                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/attendance" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView2"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/attendance"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonAttendance"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />


                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/events" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView4"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/ims_gallery"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonEvents"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />


                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/exams" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView5"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/examination"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonExams"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />


                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/aboutus" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView6"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/about_us"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonAbout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />


                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView7"
                                    android:layout_width="58dp"
                                    android:layout_height="95dp"
                                    android:layout_centerHorizontal="true"
                                    android:src="@drawable/askus" />

                                <TextView
                                    android:id="@+id/home"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/imageView7"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginBottom="10dp"
                                    android:fontFamily="casual"
                                    android:text="@string/ask_questions"
                                    android:textColor="#000000"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/buttonAsk"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />




                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>